--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.13",
     "astro": "^5.4.3",
+    "canvas-confetti": "^1.9.3",
     "tailwindcss": "^4.0.13",
     "tailwindcss-animated": "^2.0.0"
   }
